--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
                                     <div class="card-text-2">
                                         <p>
                                             <i class="fa-regular fa-calendar"></i>
-                                            <span> Wednesday 1, Mar</span>
+                                            <span id="date"> Wednesday 1, Mar</span>
                                         </p>
                                         <p>
                                             <i class="fa-solid fa-location-dot"></i>
-                                            <span> London, GB</span>
+                                            <span id="place"> London, GB</span>
                                         </p>
                                     </div>
                                 </div>
@@ -413,7 +413,6 @@
 
     <!-- Vanilla JS -->
     <script type="module" src="/src/js/app.js"></script>
-    <script type="module" src="/src/js/route.js"></script>
 </body>
 
 </html>
