17th June 100% done

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <div class="row justify-content-lg-between justify-content-end">
                                 <div class="search-wrapper col-md-6 col-2 h-100 rounded-pill">
                                     <button type="submit" id="btn"><i class="fa-solid fa-magnifying-glass"></i></button>
-                                    <input type="text" placeholder="Search" id="searchBox" class="d-none d-lg-inline-block ps-2">
+                                    <input type="text" placeholder="Search" class="d-none d-lg-inline-block ps-2">
                                 </div>
 
                                 <a class="col-md-4 col-6 location rounded-pill h-100" href="#">
@@ -106,31 +106,42 @@
                                 <div class="card-body">
 
                                     <ul>
-                                        <li>
-                                            <img src="/src/images/weather_icons/01n.png">
-                                            <p>2 Mar</p>
-                                            <p>Thursday</p>
+                                        <li class="row">
+                                            <div class="col">
+                                                <img src="/src/images/weather_icons/01n.png">
+                                            </div>
+                                            <p class="col-4">2 Mar</p>
+                                            <p class="col-5">Thursday</p>
                                         </li>
-                                        <li>
-                                            <img src="/src/images/weather_icons/01n.png">
-                                            <p>2 Mar</p>
-                                            <p>Thursday</p>
+                                        <li class="row">
+                                            <div class="col">
+                                                <img src="/src/images/weather_icons/01n.png">
+                                            </div>
+                                            <p class="col-4">2 Mar</p>
+                                            <p class="col-5">Thursday</p>
                                         </li>
-                                        <li>
-                                            <img src="/src/images/weather_icons/04d.png">
-                                            <p>2 Mar</p>
-                                            <p>Thursday</p>
+                                        <li class="row">
+                                            <div class="col">
+                                                <img src="/src/images/weather_icons/01n.png">
+                                            </div>
+                                            <p class="col-4">2 Mar</p>
+                                            <p class="col-5">Thursday</p>
                                         </li>
-                                        <li>
-                                            <img src="/src/images/weather_icons/10n.png">
-                                            <p>2 Mar</p>
-                                            <p>Thursday</p>
+                                        <li class="row">
+                                            <div class="col">
+                                                <img src="/src/images/weather_icons/01n.png">
+                                            </div>
+                                            <p class="col-4">2 Mar</p>
+                                            <p class="col-5">Thursday</p>
                                         </li>
-                                        <li>
-                                            <img src="/src/images/weather_icons/04d.png">
-                                            <p>2 Mar</p>
-                                            <p>Thursday</p>
+                                        <li class="row">
+                                            <div class="col">
+                                                <img src="/src/images/weather_icons/01n.png">
+                                            </div>
+                                            <p class="col-4">2 Mar</p>
+                                            <p class="col-5">Thursday</p>
                                         </li>
+                                       
                                     </ul>
 
                                 </div>
