done and dusted

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                                     <input type="text" placeholder="Search" class="d-none d-lg-inline-block ps-2">
                                 </div>
 
-                                <a class="col-md-4 col-6 location rounded-pill h-100" href="#">
+                                <a class="col-md-4 col-6 location rounded-pill h-100" id="curr_location" href="#">
                                     <i class="fa-solid fa-location-crosshairs"></i>
-                                    <span class="fw-semibold d-none d-sm-block" id="curr_location">Current Location</span>
+                                    <span class="fw-semibold d-none d-sm-block">Current Location</span>
                                 </a>    
                             </div>
                         </div>
